--- a/Curso Desenvolvimento Web/CSS/origem.html
+++ b/Curso Desenvolvimento Web/CSS/origem.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <title>Origem CSS: Externo, Interno e Inline</title>
     <style>
-        /* ... */
+        /* A regra valida e sempre a ultima linha lida pelo browser*/
+        body {
+            background-color: aquamarine;
+        }
     </style>
+    <link rel="stylesheet" href="css/externo.css">
 </head>
 
 <body>
