--- a/Curso Desenvolvimento Web/CSS/overflow.html
+++ b/Curso Desenvolvimento Web/CSS/overflow.html
@@ -9,6 +9,10 @@
             height: 100px;
             width: 260px;
             border: solid 3px;
+            /* esconde tudo o que ultrapassa a area */
+            overflow: hidden;
+            /* cria um barra scroll dentro do box */
+            overflow: scroll;
         }
     </style>
 </head>
