--- a/Curso Desenvolvimento Web/CSS/classeTag.html
+++ b/Curso Desenvolvimento Web/CSS/classeTag.html
@@ -11,7 +11,7 @@
     <div class='tag'>
         <span class='tag'>1</span>
         <span class='tag'>2</span>
-        <span class='tag'>3</span>
+        <span class='tag nolabel'>3</span>
         <p class='tag'>4</p>
         <div class='tag'>5</div>
         <ul class='tag'>6</ul>
