--- a/Curso Desenvolvimento Web/CSS/especificidade1.html
+++ b/Curso Desenvolvimento Web/CSS/especificidade1.html
@@ -5,7 +5,29 @@
     <meta charset="UTF-8">
     <title>Especificidade CSS</title>
     <style>
-        /* https://developer.mozilla.org/pt-BR/docs/Web/CSS/Specificity */
+        /* https://developer.mozilla.org/pt-BR/docs/Web/CSS/Specificity 
+        
+        1. regra com !important
+        2. seletores mais especificos
+        3. ultima regra processada (empate)
+        */
+
+        p{
+            background-color:  gray;
+        }
+
+        .observacao {
+            background-color: greenyellow;
+            border: dashed 5px;
+            padding: 200px !important;
+            font-size: 40px;  
+        } 
+
+        p.observacao{
+            padding: 2px;
+            background: linear-gradient(to right, red, yellow);
+        }
+
     </style>
 </head>
 
