--- a/Curso Desenvolvimento Web/CSS/flexbox2.html
+++ b/Curso Desenvolvimento Web/CSS/flexbox2.html
@@ -4,9 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox #02</title>
-    <link rel="stylesheet" href="css/tag.css">
+    <!-- <link rel="stylesheet" href="css/tag.css"> -->
     <style>
-        /* ... */
+        div{
+            border: solid 5px dodgerblue;
+            font-size: 40px;
+        }
+
+        .flex-container  div{
+            box-sizing: border-box;
+            width: 100px;
+            /* expande e faz completar o box principal com o mesmo valor */
+            flex-grow: 1;
+        }
+
+        .flex-container {
+            display: flex;
+            height: 300px;
+            width: 600px;
+            width: 300px;
+            /* encolhe de forma porpocional parecido com o flex-grow */
+            flex-shrink: 1;
+
+        }
+        /* aplica no terceiro filho dentro do flex-container */
+        .flex-container div:nth-child(3) {
+            background-color: indianred;
+            /* muda a orden da box */
+            order: -1;
+            align-self: center;
+            align-self: stretch;
+        }
+
+        .flex-container div:nth-child(1){
+            /* expande e faz completar o box principal com o valor de sobra o dobro do primeiro */
+            flex-grow: 2;
+            flex-shrink: 5;
+        }
+
+
     </style>
 </head>
 
