--- a/Curso Desenvolvimento Web/CSS/flexbox3.html
+++ b/Curso Desenvolvimento Web/CSS/flexbox3.html
@@ -4,9 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox #03</title>
-    <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        div {
+            border: solid 5px dodgerblue;
+            font-size: 40px;
+        }
+
+        .flex-container div {
+            box-sizing: border-box;
+        }
+
+        .flex-container {
+            display: flex;
+            flex-direction: row;
+        }
+
+        .flex-container div {
+            /* o tamanho do box ficam em 100px em relacao a colum(height) ou row(wight) */
+            flex-basis: 100px; 
+            width: 200px; /* vai perder */
+        }
+
+        .flex-container div:nth-child(4) {
+            /* grow shrink basis */
+            flex: 3 6 100px;
+        }
+
+        .flex-container {
+            width: 300px;
+            width: 600px;
+        }
     </style>
 </head>
 
