--- a/Curso Desenvolvimento Web/CSS/heranca.html
+++ b/Curso Desenvolvimento Web/CSS/heranca.html
@@ -4,8 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Herança</title>
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <style>
         /* ... */
+
+        body {
+            font-family: 'Oswald', sans-serif;
+            font-size: 40px;
+            border: solid 3px red;
+            padding: 50px;
+        }
+
+        div{
+            /* inherit chama a propriedade como herança, das propriedade nao herdadas  */
+            border: inherit;
+            padding: inherit;
+        }
+
     </style>
 </head>
 
