--- a/Curso Desenvolvimento Web/DOM/trabalhandoComEventos3.html
+++ b/Curso Desenvolvimento Web/DOM/trabalhandoComEventos3.html
@@ -45,7 +45,27 @@
     </div>
     <div class="direita" wm-dropzone></div>
     <script>
-        // ...
+        const items = document.querySelectorAll('[wm-dropzone] .item')
+        items.forEach((item, index) => {
+            // efeito de deslocar 
+            item.draggable = true
+            // verifica se o item tem id
+            item.id = item.id || `draggable-item-${index}`
+            item.ondragstart = e =>
+                // adiciona o id
+                e.dataTransfer.setData('item-id', e.target.id)
+        })
+
+        const dropzones = document.querySelectorAll('[wm-dropzone]')
+        dropzones.forEach(dropzone => {
+            dropzone.ondragover = e => e.preventDefault()
+            dropzone.ondrop = function(e) {
+                const id = e.dataTransfer.getData('item-id')
+                const item = document.getElementById(id)
+                // e.target.appendChild(item)
+                dropzone.appendChild(item)
+            }
+        })
     </script>
 </body>
 
