--- a/Curso Desenvolvimento Web/DOM/acessandoAtributos2.html
+++ b/Curso Desenvolvimento Web/DOM/acessandoAtributos2.html
@@ -17,7 +17,31 @@
         </ul>
     </div>
     <script>
-        // ...
+
+        const lista = document.querySelector('div ul[destino="escritório"]')
+        console.log('Elemento "ul"...............')
+        console.log('childNodes', lista.childNodes)
+        // lista.destino nao acessa devido ser um atributo personalizado
+        console.log('destino', lista.destino)
+        // melhor formato
+        console.log('getAttribute', lista.getAttribute('destino'))
+        // ve se o atributo esta ou nao num determinado elemento
+        console.log('hasAttribute', lista.hasAttribute('destino'))
+        // muda o valordo atributo 
+        lista.setAttribute('destino', 'empresa')
+        lista.setAttribute('status', 'aberto')
+        lista.removeAttribute('destino')
+        console.log(lista.dataset.urgencia)
+        lista.dataset.urgencia = 4
+        console.log(lista.getAttribute('data-urgencia'))
+
+        // cuidado
+        const label = document.querySelector('label')
+        // nao acessa 
+        console.log(label.for)
+        // acessa
+        console.log(label.htmlFor)
+        console.log(label.getAttribute('for'))
     </script>
 </body>
 
